@@ -1,5 +1,5 @@
 select a._Assay_key, a._Refs_key, substring(specimenLabel, 1, 50) as specimenLabel
-INTO TEMPORARY TABLE knockin
+INTO TEMPORARY TABLE reporter
 from GXD_Assay a, GXD_Specimen s
 where a._AssayType_key  in (10, 11)
 and a._Assay_key = s._Assay_key
@@ -13,7 +13,7 @@ and a._Marker_key = g._Marker_key)
 \echo ''
 
 select a.accID as "Assay", b.accID as "J:", k.specimenLabel
-from knockin k, ACC_Accession a, ACC_Accession b
+from reporter k, ACC_Accession a, ACC_Accession b
 where k._Assay_key = a._Object_key
 and a._MGIType_key = 8
 and k._Refs_key = b._Object_key
