@@ -1,3 +1,9 @@
+TAG: qcreports_db-6-0-11-32
+DATE: 02/26/2018
+STAFF: sc
+CHANGES: TR12779 - Recombinase reporter check
+1) Added monthly/RECOMB_ReporterCheck.py and updated index file
+
 TAG: qcreports_db-6-0-11-31
 DATE: 02/26/2018
 STAFF: sc
